--- a/src/assets/styles/NoteBoard.css
+++ b/src/assets/styles/NoteBoard.css
@@ -1,8 +1,10 @@
 .note-board {
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-  }
+  padding: 20px;
+  background-color: #FEF3E2;
+  border-radius: 8px;
+  min-height: 500px;
+  height: auto;
+}
   
   .add-note-btn {
     background-color: #f7c5a0;
@@ -18,6 +20,12 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 20px;
+  }
+
+  .btn-add{
+    display: flex;
+    justify-content: flex-end;
+    background-color: transparent;
   }
   
 
