--- a/src/assets/styles/NoteBoard.css
+++ b/src/assets/styles/NoteBoard.css
@@ -5,7 +5,12 @@
   min-height: 500px;
   height: auto;
 }
-  
+.add-note-btn img {
+  width: 20px; 
+  height: 20px;
+  margin-right: 8px;
+  vertical-align: middle;
+}
   .add-note-btn {
     background-color: #f7c5a0;
     border: none;
@@ -14,12 +19,14 @@
     cursor: pointer;
     color: #fff;
     margin-bottom: 20px;
+    align-items: center; /* Alinea la imagen y el texto verticalmente */
+    justify-content: center;
   }
   
   .notes-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 20px;
+    gap: 25px;
   }
 
   .btn-add{
