--- a/src/assets/styles/Notes.css
+++ b/src/assets/styles/Notes.css
@@ -1,12 +1,13 @@
 /* Estilos de la nota */
 .note {
-  padding: 15px;
+  padding: 10px;
+  margin-left: 10px;
   border-radius: 8px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  cursor: pointer;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  font-family: 'Noto Sans', sans-serif;
-  position: relative;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 250px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
 }
 
 .note:hover {
@@ -23,11 +24,12 @@
 }
 /* Texto de descripción en la nota */
 .note p {
-  white-space: nowrap;
+  font-size: 8px;
+  color: #666;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 100%; /* Asegura que no se desborde el contenedor */
-  max-height: 80px; /* Limita la altura del párrafo */
+  display: -webkit-box;
+
 }
 
 .action-icons img {
@@ -37,22 +39,22 @@
   border-radius: 50%; 
 }
 .action-icons button {
-  width: 30px;           /* Ancho del botón */
-  height: 30px;          /* Alto del botón */
-  background-color: none; /* Fondo negro */
-  border: solid 2px black;          /* Quitar bordes */
-  border-radius: 50%;    /* Hacerlo circular */
-  display: flex;         /* Flexbox para centrar el contenido */
-  justify-content: center; /* Centrar horizontalmente */
-  align-items: center;   /* Centrar verticalmente */
-  cursor: pointer;       /* Cambiar el cursor al pasar por encima */
-  opacity: 1;          /* Hacer el fondo algo transparente */
+  width: 30px;    
+  height: 30px;       
+  background-color: none; 
+  border: solid 2px black;        
+  border-radius: 50%;  
+  display: flex;       
+  justify-content: center; 
+  align-items: center;  
+  cursor: pointer;     
+  opacity: 1;         
 }
 /* Contenedor para los botones de acción (solo íconos) */
 .action-icons {
   display: none;
   position: absolute;
-  top: -30px;
+  top: 0px;
   right: 10px;
   z-index: 1;
 }
