--- a/src/assets/styles/AppBarAndNoteBoard.css
+++ b/src/assets/styles/AppBarAndNoteBoard.css
@@ -1,4 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
 
+*{
+  font-family: 'Noto Sans', sans-serif;
+}
 .app-bar {
     background-color: #f7c5a0;
     padding: 20px;
