--- a/src/assets/styles/ConfirmDialog.css
+++ b/src/assets/styles/ConfirmDialog.css
@@ -1,5 +1,9 @@
 /* ConfirmDialog.css */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
 
+*{
+  font-family: 'Noto Sans', sans-serif;
+}
 .modal-overlay {
   position: fixed;
   top: 0;
