--- a/src/assets/styles/NoteForm.css
+++ b/src/assets/styles/NoteForm.css
@@ -1,4 +1,9 @@
 /* Modal Overlay */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
+
+*{
+  font-family: 'Noto Sans', sans-serif;
+}
 .modal-overlay {
   position: fixed;
   top: 0;
