--- a/src/assets/styles/ToolBar.css
+++ b/src/assets/styles/ToolBar.css
@@ -4,6 +4,7 @@
   font-family: 'Noto Sans', sans-serif;
 }
 
+/*ESTILOS GENERALES DEL APP BAR Y ESPECIFICOS */
 .toolbar {
     background-color: #f1f1f1;
     padding: 20px;
