--- a/src/assets/styles/Notes.css
+++ b/src/assets/styles/Notes.css
@@ -7,14 +7,16 @@
 .note {
   padding: 10px;
   margin-left: 10px;
-  border-radius: 8px;
+  border-radius: 0;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   max-width: 250px;
   height: 200px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  cursor: pointer;
 }
+
 
 .note:hover {
   transform: scale(1.05);
@@ -28,7 +30,7 @@
   max-width: 100%; 
   max-height: 80px;
 }
-/* Texto de descripción en la nota */
+/* Txto de descripción en la nota */
 .note p {
   font-size: 8px;
   color: #666;
@@ -56,7 +58,7 @@
   cursor: pointer;     
   opacity: 1;         
 }
-/* Contenedor para los botones de acción (solo íconos) */
+/* Contenedor para los botones de accin (solo íconos) */
 .action-icons {
   display: none;
   position: absolute;
@@ -67,7 +69,7 @@
 .action-icons button {
   background-color: #ffff;
 }
-/* Opcional: Cambiar el fondo al pasar el mouse sobre los botones */
+/* Cambiar el fondo al pasar el mouse sobre los botones */
 .action-icons button:hover {
   background-color: rgba(0, 0, 0, 0.2);
 }
@@ -131,4 +133,20 @@
   color: #000;
   font-weight: bold;
   margin-top: auto; 
+}
+
+/* Media Query para pantallas pequeñas */
+@media (max-width: 600px) {
+  .note {
+    padding: 10px;
+    margin-left: 10px;
+    border-radius: 0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 280px;
+    height: 280px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+}
 }
