--- a/src/assets/styles/Notes.css
+++ b/src/assets/styles/Notes.css
@@ -36,12 +36,13 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 100%; 
+  max-width: 80%; 
   max-height: 80px;
   margin-top: 45px;
-  margin-left: 38px;
-
+  margin-left: 30 px;
+  text-align: center;   
 }
+
 .note:hover {
   transform: scale(1.05);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
@@ -52,7 +53,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 100%; 
+  max-width: 150px; 
   max-height: 80px;
 }
 /* Txto de descripción en la nota */
