--- a/src/assets/styles/NoteBoard.css
+++ b/src/assets/styles/NoteBoard.css
@@ -25,7 +25,7 @@
   row-gap: 54px;
 }
 
-/* Mostrar el botón de agregar nota (normal) en pantallas grandes */
+/* Mostrar el botón de agregar nota  */
 .add-note-btn {
   background-color: #f7c5a0;
   border: none;
